--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="price-card flex-center w-400">
                   <div class="price-card__header flex-between w-100">
                     <span class="flex-center">
-                      <select>
+                      <select class="blue-bordered">
                         <option>EUR</option>
                         <option>USD</option>
                       </select>
